# cppProjects

./: CMakeLists.txt  LICENSE  README.md
project01/: CMakeLists.txt  GFNumber.cpp  GFNumber.h  GField.cpp  GField.h  IntegerFactorization.cpp  README  cpp_ex1.tar  ex1_cpp_tester_v1.2.cpp  executable  lol  main.cpp
project02/: CMakeLists.txt  Fractal.cpp  Fractal.h  Fractal.h.gch  FractalDrawer  FractalDrawer.cpp  Makefile  README  TESTER_README.txt  Tester  checker.csv  cpp_ex2.tar  example.csv  test01.csv  test02.csv  test03.csv  tester  tester.py  usage.txt
project02/solutions/: .school_5.swp  .student_5.swp  school_10  school_20  school_23  school_25  school_6  student_11  student_12  student_14  student_16  student_24  student_26  student_46  student_7
project02/tester_files/good_input/: big_pic.txt  just_pic_1.txt  just_pic_2.in  just_pic_3.csv  lot_of_line.csv  small_2.csv
project02/tester_files/invalid_input/: an_dif_chice.in  anderlones.txt  deg_0.txt  degree_more_then_6.txt  dot.txt  empty_line.txt  empty_lint_in_start..in  float_num1.csv  float_num1.txt  more_then_2_row.txt  neg_chice.in  neg_degree.txt  no_ligal_sigen.txt  non_ligel_leter.csv  short_line  slesh.txt  space.txt  space_in_line  zero_chice.txt
project02/tester_files/system_out/: JUST_PIC_2.IN_SCHOOL_SOLUTION_OUTPUT.TXT  ONE_LINE_SCHOOL_SOLUTION_OUTPUT.TXT  (+4 more)
project02/tests/: test1  test15  test17  test18  test22  test23  test27  test28  test29  test30  test31  test32  test33  test34  test35  test36  test37  test38  test39  test40  test41  test42  test43  test44  test45  test5  test6  test7
(+22 files in other folders)
